@@ -8,12 +8,12 @@ Facter.add('auditd_sample_ruleset_location') do
   confine :kernel => 'Linux'
 
   confine do
-    File.exist?('/usr/share/audit/sample-rules') || !Dir.glob('/usr/share/doc/audit*/rules').empty?
+    File.directory?('/usr/share/audit/sample-rules') || !Dir.glob('/usr/share/doc/audit*/rules').empty?
   end
 
   setcode do
 
-    retval = '/usr/share/audit/sample-rules' if File.exist?('/usr/share/audit/sample-rules')
+    retval = '/usr/share/audit/sample-rules' if File.directory?('/usr/share/audit/sample-rules')
     retval = Dir.glob('/usr/share/doc/audit*/rules').first if !Dir.glob('/usr/share/doc/audit*/rules').empty?
 
     retval
